Made background color configurable

--- a/django/dtc0001themechange/templates/dtc0001themechange/index.html
+++ b/django/dtc0001themechange/templates/dtc0001themechange/index.html
@@ -1,8 +1,7 @@
 {% load static %}
 <style>
     body {
-        background-color: red;
-        color: white;
+        background-color: {{ bg_color|default_if_none:"white" }};
     }
 </style>
 <link rel="stylesheet" type="text/css" href="{% static 'dtc0001themechange/style.css' %}" />
